--- a/Text/Text/Text.vcxproj
+++ b/Text/Text/Text.vcxproj
@@ -116,6 +116,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Pokemon.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Pokemon.h" />
+    <ClInclude Include="Weapon.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
