--- a/Text/Text/Text.vcxproj
+++ b/Text/Text/Text.vcxproj
@@ -115,11 +115,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Karateka.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Pokemon.cpp" />
+    <ClCompile Include="Sumo.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Karateka.h" />
     <ClInclude Include="Pokemon.h" />
+    <ClInclude Include="Sumo.h" />
     <ClInclude Include="Weapon.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
